JSAI/error/src/test/resources/base/v009.js
var o = {a:1, b:2, c:3};

for (var x in o) {
	print(x);
}